<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string
        name="hello">Hello
    </string> 
   <string name="mapview_name">mapview</string> 
    <string
        name="app_name">SB Wall</string>
 
 	<string name="app_name1">SB Wall - Location</string>
 
    <string
        name="buttontext_simpleemail">Send plain text</string>
    <string
        name="email_message">This is my message body.\n\nCheers,\nMe
    </string>
    <string
        name="email_subject">This is my subject</string>
    <string
        name="email_address">test@fakehost.com</string>
    <string
        name="email_address_cc">test_cc@fakehost.com</string>
    <string
        name="email_address_bcc">test_bcc@fakehost.com</string>

    <string
        name="feedbacktitle">Enter feedback details to send to the developer:
    </string>
    <string
        name="feedbackname">Your Name</string>
    <string
        name="feedbackemail">Your Email</string>
    <string
        name="feedbackbody">Feedback Details...</string>
    <string
        name="feedbackresponse">Would you like an email response?</string>
    <string
        name="feedbackbutton">Send Feedback</string>
    <string
        name="feedbacktype">Enter feedback type...</string>

    <string
        name="feedbacktype1">Praise</string>
    <string
        name="feedbacktype2">Suggestion</string>
    <string
        name="feedbacktype3">Bug</string>
    <string
        name="feedbackmessagebody_format">To: The %1$s Department\n\n %2$s\n\n %3$s (%4$s) - %5$s
    </string>
    <string
        name="feedbackmessagebody_responseyes">Requires a response</string>
    <string
        name="feedbackmessagebody_responseno">Does not require a response</string>
    <string
        name="feedbackmessagesubject_format">Application Feedback (%1$s)</string>
	

    <string
        name="wallposttitle">New Wall Post: </string>
    <string
        name="wallpostsubject">Title </string>
	<string
        name="wallpostlocation">Location </string>    
	<string
        name="wallpostbody">Message... </string>    
	<string
        name="postExpiresIn">Expires in </string>      
   <string
        name="category">Category </string>  
          
        
   	<string
        name="location1">Student Activities Center</string>       
	<string
        name="location2">Indoor Sports Complex</string>
 	<string
        name="location3">Melville Library</string>
   	<string
        name="location4">Staller Center for the Arts</string>       
	<string
        name="location5">Administration</string>
 	<string
        name="location6">Cafeteria</string>
    <string
        name="location7">Kenneth P LaValle Athletic Stadium</string>       
	<string
        name="location8">Computer Science</string>
 	<string
        name="location9">Wang Center</string>
    <string
        name="location10">Chapin Apartment</string>       
	<string
        name="location11">University Hospital</string>
 	<string
        name="location12">Roth Quad</string>
   	<string
        name="location13">Stony Brook Union</string>       
	<string
        name="location14">Basketball</string>
 	<string
        name="location15">Student Health Center</string>
    <string
        name="location16">CEWIT</string>       
	<string
        name="location17">Stony Brook Rail Station</string>
 	<string
        name="location18">Union Cafeteria</string>
 	<string
        name="location19">Graduate School</string>
    <string
        name="location20">Tabler Quad</string>       
	<string
        name="location21">Mendelsohn Quad</string>
 	<string
        name="location22">Kelly Quad</string>
 	<string
        name="location23">H Quad</string>
    <string
        name="location24">Eleanor Roosevelt Quad</string>       
	<string
        name="location25">Schomburg Apartments</string>
 	<string
        name="location26">West Apartments</string>
 	<string
        name="location27">Starbucks</string>
    <string
        name="location28">Career Center</string>    
    
    <string
        name="locationname">Location </string>
              
 	<string
        name="postbutton">Share</string>
        
 	<string
        name="tenMin">10 minutes</string>
 	<string
        name="thirtyMin">30 minutes</string>
 	<string
        name="oneHr">1 hour</string>
 	<string
        name="twoHr">2 hours</string>
 	<string
        name="threeHr">3 hours</string>
 	<string
        name="fourHr">4 hours</string>
 	<string
        name="fiveHr">5 hours</string>
 	<string
        name="oneDay">1 day</string>
 	<string
        name="twoDay">2 days</string>

 	<string
        name="food">Food</string>
 	<string
        name="sports">Sports</string>
 	<string
        name="fun">Fun</string>
 	<string
        name="seminar">Seminar</string>
 	<string
        name="others">Others</string>
 	
       
</resources>
