<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

<!--Put form controls here-->
<TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:text="@string/feedbacktitle"
    android:textSize="10pt">
</TextView>
<EditText
    android:id="@+id/EditTextName"
    android:layout_height="fill_parent"
    android:hint="@string/feedbackname"
    android:inputType="textPersonName"
    android:layout_width="fill_parent">
</EditText>
<EditText
    android:id="@+id/EditTextFeedbackBody"
    android:layout_height="fill_parent"
    android:hint="@string/feedbackbody"
    android:inputType="textMultiLine"
    android:lines="5"
    android:layout_width="fill_parent">
</EditText>
<Spinner
    android:id="@+id/SpinnerFeedbackType"
    android:layout_height="fill_parent"
    android:prompt="@string/feedbacktype"
    android:layout_width="fill_parent"
    android:entries="@array/feedbacktypelist">
</Spinner>
<CheckBox
    android:id="@+id/CheckBoxResponse"
    android:layout_height="fill_parent"
    android:text="@string/feedbackresponse"
    android:layout_width="fill_parent">
</CheckBox>
<Button
    android:id="@+id/ButtonSendFeedback"
    android:layout_height="fill_parent"
    android:text="@string/feedbackbutton"
    android:onClick="sendFeedback"
    android:layout_width="fill_parent">
</Button>
    </LinearLayout>
</ScrollView>