<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
    
<LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

<!--Put form controls here-->
<TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:text="@string/wallposttitle"
    android:textSize="10pt">
</TextView>
<EditText
    android:id="@+id/EditWallPostSubject"
    android:layout_height="fill_parent"
    android:inputType="text"
    android:layout_width="fill_parent" 
    android:hint="@string/wallpostsubject">
</EditText>
<!-- This is for date selector
<Button
    android:id="@+id/EditWallPostExpDate"
    android:layout_height="fill_parent"
    android:inputType="date"
    android:layout_width="fill_parent" 
    android:hint="N/A">
</Button>
 -->
<Spinner
    android:id="@+id/SpinnerLocations"
    android:layout_height="fill_parent"
    android:prompt="@string/wallpostlocation"
    android:layout_width="fill_parent"
    android:entries="@array/locationslist">
</Spinner>
<Spinner
    android:id="@+id/SpinnerCategories"
    android:layout_height="fill_parent"
    android:prompt="@string/category"
    android:layout_width="fill_parent"
    android:entries="@array/category">
</Spinner>
<Spinner
    android:id="@+id/SpinnerPostExpires"
    android:layout_height="fill_parent"
    android:prompt="@string/postExpiresIn"
    android:layout_width="fill_parent"
    android:entries="@array/postExpiresIn">
</Spinner>
<EditText
    android:id="@+id/EditWallPostBody"
    android:layout_height="fill_parent"
    android:hint="@string/wallpostbody"
    android:inputType="textMultiLine"
    android:layout_width="fill_parent" 
    android:lines="6">
</EditText>
<Button
    android:id="@+id/ButtonPostOnWall"
    android:layout_height="fill_parent"
    android:onClick="postOnWall"
    android:layout_width="fill_parent" 
    android:text="@string/postbutton">
</Button>
    </LinearLayout>
</ScrollView>